@@ -1,3 +1,8 @@
+2003-01-20  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/variant.S: Be careful about using QUICC functions unless that
+	package is present (some MPC8xx platforms don't use it).
+
 2003-01-18  Bart Veer  <bartv@ecoscentric.com>
 
 	* src/variant.S: _mpc8xx_reset caused build failures with current
